--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,3 +20,85 @@
 .App-link {
   color: #09d3ac;
 }
+
+.main-box {
+  margin-top: 30px;
+}
+
+.detail-box {
+  padding: 20px;
+  height: 30vh;
+}
+
+.detail-item {
+  max-width: 100%;
+  overflow-wrap: anywhere;
+}
+
+.action-btn {
+  margin-top: 20px !important;
+  min-width: 300px !important;
+  height: 40px;
+}
+
+.preview {
+  height: 25vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.display {
+  min-width: 60vw;
+  max-width: 90vw;
+
+  margin: 30px auto;
+
+  display: flex;
+  justify-content: center;
+}
+
+.title {
+  margin-left: 30px !important;
+  margin-top: 20px;
+}
+
+.create-btn {
+  position: absolute !important;
+  right: 30px;
+  top: 84px;
+  width: 64px;
+  min-width: 64px;
+  height: 64px;
+  border-radius: 50% !important;
+}
+
+.dialog-card {
+  min-width: 300px;
+  height: 40vh;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+.dialog-title {
+  width: 200px;
+}
+
+.dialog-input {
+  width: 100%;
+}
+
+.dialog-btn {
+  width: 80%;
+  margin-left: 10% !important;
+}
+
+.dialog-card-upload {
+  display: flex;
+  flex-direction: column;
+}
